Update ModuleClassLoader.java